# Agrowise-backend

./: .gitignore  .mcp.json  CLAUDE.md  Hacksagon_Team_NamoFans_Submission_AI_Ready.md  LICENSE  README.md  architecture.md  config.yaml  examples.md  pyproject.toml
bolbhav-data/: Agmark crops.csv  IMD Agromet advisory locations.csv
bolbhav-data-main/: Gramhal_ Pan-India Mappings.csv
data/: IMD_API.md  KisanVani_Knowledge_Base.md  cibrc_database.csv  cibrc_database_cleaned.csv  cibrc_tool.py  crop_catalogue.json  evapotranspiration_tool.py  imd_tool.py  soil_moisture_tool.py
data/cibrc/: chemicals.md  list_of_pesticides_which_are_banned_refused_registration_and_restricted_in_use_0.txt  list_pf_pesticide_formulations_registered_as_on_30.10.2025.txt  updated_list_of_pesticides_as_on_30.10.2025.txt
dataset/: DATA_INVENTORY.md  iari_soil_water_testing_ocr.txt
scripts/: ingest.py
src/agromind/: config.py  main.py
tests/: test_config.py  test_tool_wrappers.py  test_vertexai_init.py
tests/agent/: test_chain.py  test_mandatory.py  test_prompt.py
tests/api/: test_chat.py  test_diagnosis_api.py  test_health.py
tests/diagnosis/: test_detector.py  test_image.py
tests/firebase/: test_client.py  test_fcm.py  test_firestore_ops.py  test_storage_ops.py
tests/geo/: test_crop_normalizer.py  test_imd_stations.py  test_mandi_locator.py  test_neighbours.py  test_resolver.py
tests/market/: test_agmarknet.py
tools/: cibrc_tool.py  evapotranspiration_tool.py  imd_tool.py  kcc_tool.py  soil_moisture_tool.py  test_genai_live.py  test_vision_gcs.py
(+34 files in other folders)
